# attention-throughput-optimizer

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/benchmarks/: full_sweep.yaml
docs/: 01-attention-basics.md  02-quadratic-problem.md  03-linear-attention-theory.md  04-gpu-memory-hierarchy.md  05-triton-introduction.md  06-kernel-development.md  07-optimization-journey.md
examples/: 01_basic_usage.py  02_benchmark_reproduction.py  03_compare_implementations.py  04_real_model_integration.py
notebooks/: 01_attention_visualization.ipynb  02_complexity_analysis.ipynb  03_memory_profiling.ipynb  04_benchmark_comparison.ipynb
src/ato/: __init__.py  config.py
src/ato/attention/: __init__.py  base.py  registry.py
src/ato/attention/efficient/: __init__.py  flash_v2.py  linear.py  xformers_attn.py
src/ato/attention/standard/: __init__.py  grouped_query.py  multi_head.py  multi_latent.py  scaled_dot_product.py
src/ato/benchmark/: __init__.py  metrics.py  report.py  runner.py
src/ato/kernels/: __init__.py
src/ato/kernels/triton/: __init__.py  flash_attn.py  linear_attn.py
src/ato/profiling/: __init__.py  latency.py  memory.py
src/ato/utils/: __init__.py  device.py  logging.py  tensor_utils.py
tests/: __init__.py  conftest.py
tests/test_attention/: __init__.py  test_standard.py
